# maturity-assessment-2

./: .env.example  .gitignore  .pre-commit-config.yaml  HELP.md  README.md  alembic.ini  enhanced-operational-resilience-maturity-assessment.xlsx  pyproject.toml  requirements.txt  resilience.db  streamlit_app.py
.streamlit/: secrets.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_computed_score.py  0003_add_descriptions_and_theme_guidance.py  0004_split_pane_resilience_assessment.py  0005_expand_topic_fields.py  619a67d956f6_add_descriptions_and_theme_guidance.py
app/application/: api.py
app/domain/: models.py  schemas.py  services.py
app/infrastructure/: config.py  db.py  exceptions.py  logging.py  models.py  repositories.py  repositories_acronym.py  repositories_base.py  repositories_dimension.py  repositories_entry.py  repositories_ratingscale.py  repositories_session.py  repositories_theme.py  repositories_topic.py  uow.py
app/source_data/: Maturity_Assessment_Data.xlsx  enhanced_operational_resilience_maturity_v6.xlsx  ~$Maturity_Assessment_Data.xlsx
app/ui/: cache.py  components.py  dashboard.py  rate_topics.py  sidebar.py  state_keys.py  styles.py
app/utils/: backup.py  exports.py  resilience_radar.py  seed.py
app/web/: assets.py  dependencies.py  main.py  schemas.py
app/web/routes/: __init__.py  api.py  pages.py
app/web/static/: .gitignore
app/web/static/templates/: assessment_upload_template.xlsx
app/web/templates/: index.html
deprecated/: README.md
deprecated/streamlit/: streamlit_app.py
deprecated/streamlit/ui/: cache.py  components.py  dashboard.py  rate_topics.py  sidebar.py  state_keys.py  styles.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  icons.ts  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/assets/: dimensionImages.ts
frontend/src/components/: AssessmentPage.tsx  DashboardPage.tsx  DimensionAssessmentPage.tsx  DimensionsPage.tsx  HelpPage.tsx  SettingsPage.tsx  ThemeRibbon.tsx  ThemesPage.tsx  TopicsPage.tsx
frontend/src/components/shared/: Breadcrumb.tsx  Header.tsx
frontend/src/components/ui/: accordion.tsx  breadcrumb.tsx  calendar.tsx  carousel.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  radio-group.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
frontend/src/constants/: cmmi.ts
frontend/src/context/: AcronymContext.tsx  BreadcrumbContext.tsx  SessionContext.tsx
frontend/src/hooks/: useAcronymHighlighter.tsx  useDashboard.ts  useDimensionAssessment.ts  useDimensions.ts  useNavigationBlocker.ts  useThemeTopics.ts  useThemes.ts
frontend/src/types/: assessment.ts
frontend/src/utils/: assessmentRules.ts  ratingColors.ts  themeStats.ts
frontend/src/utils/__tests__/: assessmentRules.test.ts  themeStats.test.ts
new-ui-plan/: data-model-notes.md  design-enhancements.md  split-pane-resilience-assessment.md  steps.md
scripts/: __init__.py  run_server.py  seed_dataset.py
tests/: test_dashboard_api.py  test_improvements.py  test_run_server.py  test_scoring.py  test_validation.py
