[tool.poetry]
name = "resilience-assessment-app"
version = "0.1.0"
description = "Operational resilience maturity assessment platform with FastAPI backend, React frontend, and SQLite/MySQL database options."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.2"
plotly = "^5.23.0"
openpyxl = "^3.1.5"
pydantic = "^2.8.2"
pydantic-settings = "^2.0.0"
# For MySQL5.6 compatibility use PyMySQL (pure Python) to avoid system deps of mysqlclient
pymysql = "^1.1.1"
# Excel export
XlsxWriter = "^3.2.0"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
aiofiles = "^24.1.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
httpx = {version = "^0.27.2", extras = ["http2"]}
pillow = "^11.0.0"
click = "^8.3.0"
h11 = "^0.16.0"
pydantic-core = "^2.41.1"
anyio = "^4.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.10.1"
ruff = "^0.13.0"
pre-commit = "^4.3.0"

[tool.black]
line-length = 100
target-version = ["py310","py311","py312","py313"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
src = ["app", "scripts", "tests"]
target-version = ["py310","py311","py312","py313"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["E","F","I","UP","B","FA","SIM"]
ignore = ["E203"]  # Black compatibility

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

# These files legitimately have long lines or non-top imports:
[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["E501"]             # migrations often have long lines
"app/infrastructure/models.py" = ["E501"]# long SQL/constraints

[tool.mypy]
python_version = "3.13"
exclude = "(^|/|\\\\)app/domain/models\\.py$"
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
namespace_packages = true
# Start gradually: only check key folders first
files = ["app/application", "app/infrastructure", "app/domain"]



[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*"]
ignore_missing_imports = true

[tool.poetry.scripts]
lint = "ruff:__main__.main"
format = "black:__main__.main"
typecheck = "mypy:api"
server = "scripts.run_server:main"
seed-database = "scripts.seed_dataset:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"